Bug 605415: re-enable MICs on ARM. (r=cdleary)